# webapp-for-testing

./: Dockerfile  docker-build-image.sh  docker-run-bash.sh  k8s-cluster-role-binding.yaml  k8s-cluster-role.yaml  k8s-deployment.yaml  k8s-master-webapp.yaml  k8s-secret.yaml  k8s-service.yaml  pyproject.toml  run-webapp.sh  setup-project.sh
tests/: test_webapp.py
webapp/: main.py
